--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -44,9 +44,9 @@ WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BET
 	}
 }
 
-.footer-cutom {
-	background: $body-bg;
-}
+// .footer-cutom {
+// 	background: $body-bg;
+// }
 
 .card-upcoming-meetings {
 	.upcoming-meeting-list {
